src/test/scala/wacc/wacc_examples/invalid/semanticErr/expressions/sameLineMultiErr.wacc
begin
    char achar = 'x' ;
    int aninteger = 8 ;
    println achar > aninteger
end